--- a/basic html blog/index.html
+++ b/basic html blog/index.html
@@ -26,7 +26,9 @@
 
         <img src="img/laura-jones.jpg" alt="author: Laura Jones" width="50px" />
 
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
 
         <img src="img/post-img.jpg" alt="HTML code on a screen" width="500px" />
       </header>
@@ -93,7 +95,7 @@
     </article>
     <aside>
       <h4>Related Posts</h4>
-      <ul>
+      <ul class="related-posts">
         <li>
           <img
             src="img/related-1.jpg"
@@ -101,7 +103,7 @@
             width="75px"
           />
           <a href="">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
           <img
@@ -110,7 +112,7 @@
             width="75px"
           />
           <a href="">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img
@@ -119,7 +121,7 @@
             width="75px"
           />
           <a href="">Why JavaScript is Awesome</a>
-          <p>By Sushrut</p>
+          <p class="related-author">By Sushrut</p>
         </li>
       </ul>
     </aside>
