--- a/basic html blog/index.html
+++ b/basic html blog/index.html
@@ -8,15 +8,15 @@
 
   <body>
     <!-- This is just a comment-->
-    <header>
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
 
       <nav>
         <a href="index.html" target="_self">Home</a>
         <a href="blog.html" target="_self">Blog</a>
-        <a href="">Challenges</a>
-        <a href="">Flexbox</a>
-        <a href="">CSS Grid</a>
+        <a href="blog.html">Challenges</a>
+        <a href="blog.html">Flexbox</a>
+        <a href="blog.html">CSS Grid</a>
       </nav>
     </header>
 
@@ -62,7 +62,7 @@
       <p>In HTML, each element is made up of 3 parts:</p>
 
       <ol>
-        <li>The opening tag</li>
+        <li class="first-li">The opening tag</li>
         <li>The closing tag</li>
         <li>The actual element</li>
       </ol>
@@ -82,7 +82,9 @@
       </p>
 
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
+        <li class="first-li">
+          To be able to use the fundamental web dev language
+        </li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
