--- a/challenges/index.html
+++ b/challenges/index.html
@@ -7,34 +7,36 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <article class="article-first">
-      <h2 class="page-header">Converse Chuck Taylor All Star Low Top</h2>
-      <img
-        src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
-        alt="Chuck Taylor All Star Shoe"
-        height="250"
-        width="250"
-      />
+    <div class="container">
+      <article class="article-first">
+        <h2 class="page-header">Converse Chuck Taylor All Star Low Top</h2>
+        <img
+          src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
+          alt="Chuck Taylor All Star Shoe"
+          height="250"
+          width="250"
+        />
 
-      <p class="price"><strong>$65.00</strong></p>
-      <p class="shipping">Free shipping</p>
-      <p>
-        Ready to dress up or down, these classic canvas Chucks are an everyday
-        wardrobe staple.
-      </p>
+        <p class="price"><strong>$65.00</strong></p>
+        <p class="shipping">Free shipping</p>
+        <p>
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
 
-      <a href="https://www.converse.com" class="moreinfo"
-        >More information &rarr;</a
-      >
+        <a href="https://www.converse.com" class="moreinfo"
+          >More information &rarr;</a
+        >
 
-      <h3 class="details-Header">Product details</h3>
-      <ul class="details-list">
-        <li>Lightweight, durable canvas sneaker</li>
-        <li>Lightly padded footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch</li>
-      </ul>
+        <h3 class="details-Header">Product details</h3>
+        <ul class="details-list">
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
 
-      <button class="add-cart">Add to cart</button>
-    </article>
+        <button class="add-cart">Add to cart</button>
+      </article>
+    </div>
   </body>
 </html>
