--- a/basic html blog/index.html
+++ b/basic html blog/index.html
@@ -12,7 +12,7 @@
       <header class="main-header">
         <h1>📘 The Code Magazine</h1>
 
-        <nav>
+        <nav class="navBar">
           <a href="index.html" target="_self">Home</a>
           <a href="blog.html" target="_self">Blog</a>
           <a href="blog.html">Challenges</a>
@@ -140,5 +140,6 @@
         <p>&copy; 2027 The Code Magazine - All rights reserved.</p>
       </footer>
     </div>
+    <button class="'like">❤️Like</button>
   </body>
 </html>
