--- a/challenges/index.html
+++ b/challenges/index.html
@@ -28,6 +28,14 @@
           >More information &rarr;</a
         >
 
+        <div class="color-picker">
+          <div class="colorOption color1"></div>
+          <div class="colorOption color2"></div>
+          <div class="colorOption color3"></div>
+          <div class="colorOption color4"></div>
+          <div class="colorOption color5"></div>
+          <div class="colorOption color6"></div>
+        </div>
         <h3 class="details-Header">Product details</h3>
         <ul class="details-list">
           <li>Lightweight, durable canvas sneaker</li>
