--- a/challenges/index.html
+++ b/challenges/index.html
@@ -10,39 +10,43 @@
     <div class="container">
       <article class="article-first">
         <h2 class="page-header">Converse Chuck Taylor All Star Low Top</h2>
-        <img
-          src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
-          alt="Chuck Taylor All Star Shoe"
-          height="250"
-          width="250"
-        />
-
-        <p class="price"><strong>$65.00</strong></p>
-        <p class="shipping">Free shipping</p>
-        <p>
-          Ready to dress up or down, these classic canvas Chucks are an everyday
-          wardrobe staple.
-        </p>
-
-        <a href="https://www.converse.com" class="moreinfo"
-          >More information &rarr;</a
-        >
-
-        <div class="color-picker">
-          <div class="colorOption color1"></div>
-          <div class="colorOption color2"></div>
-          <div class="colorOption color3"></div>
-          <div class="colorOption color4"></div>
-          <div class="colorOption color5"></div>
-          <div class="colorOption color6"></div>
+        <div class="image-container">
+          <img
+            src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
+            alt="Chuck Taylor All Star Shoe"
+            height="250"
+            width="250"
+          />
         </div>
-        <h3 class="details-Header">Product details</h3>
-        <ul class="details-list">
-          <li>Lightweight, durable canvas sneaker</li>
-          <li>Lightly padded footbed for added comfort</li>
-          <li>Iconic Chuck Taylor ankle patch</li>
-        </ul>
+        <div class="cost-container">
+          <p class="price"><strong>$65.00</strong></p>
+          <p class="shipping">Free shipping</p>
+          <p class="content-info">
+            Ready to dress up or down, these classic canvas Chucks are an
+            everyday wardrobe staple.
+          </p>
 
+          <a href="https://www.converse.com" class="moreinfo"
+            >More information &rarr;</a
+          >
+
+          <div class="color-picker">
+            <div class="colorOption color1"></div>
+            <div class="colorOption color2"></div>
+            <div class="colorOption color3"></div>
+            <div class="colorOption color4"></div>
+            <div class="colorOption color5"></div>
+            <div class="colorOption color6"></div>
+          </div>
+        </div>
+        <div class="details-container">
+          <h3 class="details-Header">Product details</h3>
+          <ul class="details-list">
+            <li>Lightweight, durable canvas sneaker</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch</li>
+          </ul>
+        </div>
         <button class="add-cart">Add to cart</button>
       </article>
     </div>
