--- a/basic html blog/index.html
+++ b/basic html blog/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- This is just a comment-->
     <div class="container">
-      <header class="main-header">
+      <header class="main-header clearfix">
         <h1>📘 The Code Magazine</h1>
 
         <nav class="navBar">
@@ -19,6 +19,7 @@
           <a href="blog.html">Flexbox</a>
           <a href="blog.html">CSS Grid</a>
         </nav>
+        <!-- <div class="clear"></div> -->
       </header>
 
       <article>
@@ -29,9 +30,10 @@
             src="img/laura-jones.jpg"
             alt="author: Laura Jones"
             width="50px"
+            class="image-author"
           />
 
-          <p id="author">
+          <p id="author" class="author">
             Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
           </p>
 
