--- a/basic html blog/blog.html
+++ b/basic html blog/blog.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog</title>
+    <title>BLOG</title>
   </head>
   <body>
-    <h2>Blog</h2>
+    <h2>BLOG</h2>
     <a href="index.html">Back to home</a>
   </body>
 </html>
