--- a/challenges/index.html
+++ b/challenges/index.html
@@ -8,44 +8,48 @@
   </head>
   <body>
     <div class="container">
-      <article class="article-first">
-        <h2 class="page-header">Converse Chuck Taylor All Star Low Top</h2>
-        <div class="image-container">
+      <article class="product">
+        <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
+        <div class="container">
           <img
             src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
             alt="Chuck Taylor All Star Shoe"
             height="250"
             width="250"
           />
-        </div>
-        <div class="cost-container">
-          <p class="price"><strong>$65.00</strong></p>
-          <p class="shipping">Free shipping</p>
-          <p class="content-info">
-            Ready to dress up or down, these classic canvas Chucks are an
-            everyday wardrobe staple.
-          </p>
+          <div class="product-info">
+            <div class="product-price">
+              <p class="price"><strong>$65.00</strong></p>
+              <p class="shipping">Free shipping</p>
+            </div>
+            <p class="sale">Sale</p>
 
-          <a href="https://www.converse.com" class="moreinfo"
-            >More information &rarr;</a
-          >
+            <p class="product-description">
+              Ready to dress up or down, these classic canvas Chucks are an
+              everyday wardrobe staple.
+            </p>
+            <a href="https://converse.com" target="_blank" class="more-info"
+              >More information &rarr;</a
+            >
 
-          <div class="color-picker">
-            <div class="colorOption color1"></div>
-            <div class="colorOption color2"></div>
-            <div class="colorOption color3"></div>
-            <div class="colorOption color4"></div>
-            <div class="colorOption color5"></div>
-            <div class="colorOption color6"></div>
+            <div class="product-colors">
+              <div class="color"></div>
+              <div class="color color-blue"></div>
+              <div class="color color-red"></div>
+              <div class="color color-yellow"></div>
+              <div class="color color-green"></div>
+              <div class="color color-brown"></div>
+            </div>
           </div>
-        </div>
-        <div class="details-container">
-          <h3 class="details-Header">Product details</h3>
-          <ul class="details-list">
-            <li>Lightweight, durable canvas sneaker</li>
-            <li>Lightly padded footbed for added comfort</li>
-            <li>Iconic Chuck Taylor ankle patch</li>
-          </ul>
+
+          <div class="product-details">
+            <h3 class="details-title">Product details</h3>
+            <ul class="details-list">
+              <li>Lightweight, durable canvas sneaker</li>
+              <li>Lightly padded footbed for added comfort</li>
+              <li>Iconic Chuck Taylor ankle patch.</li>
+            </ul>
+          </div>
         </div>
         <button class="add-cart">Add to cart</button>
       </article>
